# electricitybot

./: .dockerignore  .flake8  .gitignore  .travis.yml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  entrypoint.sh  pyproject.toml  pytest.ini  test.env
.github/workflows/: app.yaml
src/electricitybot/: __init__.py  bot.py  chart.py  electricitybot.py  settings.py  test.py
tests/: test_electricitybot.py  test_power_outage_interval.py
