[tool.poetry]
name = "electricitybot"
version = "0.1.0"
description = "Telegram electricity bot"
authors = ["Maksym Biloborodko <f1ashhimself@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = "13.14"

[tool.poetry.dev-dependencies]
pytest = "7.2.0"
pyhamcrest = "2.0.4"
freezegun = "1.2.2"
flake8 = "6.0.0"
black = "22.10.0"
isort = "5.10.1"
pytest-cov = "4.0.0"

[tool.poetry.scripts]
electricitybot = "electricitybot.electricitybot:run_bot"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
combine_as_imports = true
include_trailing_comma = true
line_length = 120
multi_line_output = 3
order_by_type = false
known_local_folder = ["electricitybot"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
